# bengala

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  completion.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
bengala/: __main__.py  bot.py  config.py  fallback_words.py  messages.py  models.py  scheduler.py  scoring.py  word_pipeline.py
bengala/db/: repository.py  schema.py
docs/: CODEBASE_MAP.md
tests/: conftest.py  test_bot.py  test_config.py  test_fallback_words.py  test_messages.py  test_repository.py  test_scheduler.py  test_scoring.py  test_word_pipeline.py
