[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bengala"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3",
    "aiosqlite>=0.19",
    "APScheduler>=3.10",
    "nltk>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "mypy>=1.8",
]

[tool.mypy]
strict = true
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
